<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.AssetsFragment">

    <TextView
        android:id="@+id/txtAddAssets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_image_assets"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        android:textSize="25sp"></TextView>

    <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
        android:id="@+id/toggleGroupAssets"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtAddAssets"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:tbgChildSpacing="auto">

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/toggleClouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/clouds"/>

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/toggleTrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/trees"/>

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/toggleSeagulls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/seagulls"/>
    </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toggleGroupAssets"
        android:layout_above="@id/btnDone"
        android:padding="10dp">
        <ImageView
            android:id="@+id/imgWallpaperPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/done_pro">

    </Button>

</RelativeLayout>